<resources>
    <string name="app_name">DS</string>
    <string name="device_manager">Управление устройствами</string>
    <string name="device_counter">Подключенные устройства:</string>
    <string name="device_coun">0</string>
    <string name="add_device">Добавить устройство</string>
    <string name="use_telephone">Использовать телефон вместо маски для сна</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vladimir Simakov</string>
    <string name="nav_header_subtitle">simakovmail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="devices">Устройства</string>
    <string name="mask">Маска для сна</string>
    <string name="ligther">Ночник-будильник</string>
    <string name="connection__manager">Подключение устройств</string>
    <string name="comunicate">Взаимодействие</string>
    <string name="history">История</string>
    <string name="about">О проекте</string>
    <string name="title_activity_mask">Mask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="rythm"> Бинауральные ритмы</string>
</resources>
