<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/devices">
        <menu>
            <item
                android:id="@+id/nav_mask_sleep"
                android:icon="@drawable/ic_mask"
                android:title="@string/mask" />

            <item
                android:id="@+id/nav_ligther"
                android:icon="@drawable/ic_ligther"
                android:title="@string/ligther" />

            <item
                android:id="@+id/nav_connect"
                android:icon="@drawable/ic_connect"
                android:title="@string/connection__manager" />

        </menu>
    </item>

    <item android:title="@string/comunicate">
        <menu>
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/history" />

            <item
                android:id="@+id/nav_about1"
                android:icon="@drawable/nav_about"
                android:title="@string/about" />

        </menu>
    </item>


</menu>
